fix gap in bottom attached message

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1030,11 +1030,9 @@ ul {
 }
 
 .ui.rcpch_footer.message {
-  border-radius: 0%;
+  border-color: var(--rcpch_dark_blue);
   color: var(--rcpch_white);
   background-color: var(--rcpch_dark_blue);
-  -webkit-box-shadow: 0px 0px 0px 1px rgba(51, 102, 204, 0.22) inset, 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  box-shadow: 0px 0px 0px 1px rgba(51, 102, 204, 0.22) inset, 0px 0px 0px 0px rgba(0, 0, 0, 0);
 }
 
 .ui.top.attached.rcpch_dark_blue.clearing.segment {
@@ -1056,7 +1054,9 @@ ul {
 }
 
 .ui.bottom.attached.rcpch_footer.message {
+  margin-top: -1em;
   border-radius: 0%;
+  border-color: var(--rcpch_dark_blue);
 }
 
 footer {
